# papercuts

./: .papercuts.jsonl  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  fresh-eyes-review-2026-07-16.md  model-performance-journal.md
_scratch/: agent-browser-upstream-issue-draft.md  wave8-partial-completion-report.md
_scratch/upstream-drafts/: pc_07522a6497fc-agent-browser-hidden-page-freeze.md  pc_08099f2644cd-codex-research-collaboration.md  pc_10e28695f5fa-exa-wire-source-availability.md  pc_4a608dca0dec-claude-collaboration-thread-preflight.md  pc_8a4580aae521-codex-exec-output-capture.md  pc_8c2350511589-codex-standalone-collaboration.md  pc_8e017bfc8c63-vercel-api-parameter-help.md  pc_a96389c3cc68-agent-browser-skill-contract.md  pc_b7b1fb2f9854-claude-collaboration-thread-fallback.md  pc_b90d50ead946-gog-calendar-update-integrity.md  pc_bd9ede3cf94d-exa-public-social-fallback.md  pc_bf8ab691e65a-hyperframes-node26-sharp.md  pc_d5448baaf2f5-exa-source-domain-availability.md  pc_f2720a4950c7-exa-contents-failure-semantics.md
docs/: papercuts-diagnostic-report-2026-07-15.md
docs/plans/: 2026-07-09-papercuts-design.md  papercuts-remediation-2026-07-15.md  papercuts-remediation-manifest.md  papercuts-wave1-acceptance.md  papercuts-wave3-staged-instruction-edits.md
docs/reviews/: fresh-eyes-consolidated-2026-07-16.md  papercuts-wave3-acceptance-2026-07-15.md  papercuts-wave4a-acceptance-2026-07-16.md  papercuts-wave4b-reconciliation-2026-07-16.md  (+1 more)
scripts/: check-manifest.sh
src/: cli.rs  error.rs  lib.rs  store.rs
tests/: cli.rs  manifest_checker.rs
(+3 files in other folders)
