[package]
name = "papercuts"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A tiny CLI for AI agents to log the papercuts they hit during work."
repository = "https://github.com/treygoff24/papercuts"

[dependencies]
clap = { version = "4", features = ["derive"] }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
